# linear_regression

./: Cargo.toml  README.md  thetas.csv
src/: lib.rs  main.rs
