[package]
name = "linear_regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
csv = "1.3.1"
ndarray = { version = "0.16.1", features = ["serde"] }
plotters = "0.3.4"
yeslogic-fontconfig-sys = "=5.0.0"